# cokra

./: .bazelignore  .bazelrc  .codespellignore  .codespellrc  .cokra  .gitignore  .prettierignore  AGENTS.md  BEFORE_AFTER_COMPARISON.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  REFACTORING_SUMMARY.md  announcement_tip.toml  cliff.toml  defs.bzl  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rbe.bzl  test_welcome.sh
cokra-rs/: BUILD.bazel  Cargo.toml  PROJECT_STRUCTURE.md  clippy.toml  rustfmt.toml
cokra-rs/.cargo/: config.toml
cokra-rs/app-server/: Cargo.toml
cokra-rs/app-server-protocol/: Cargo.toml
cokra-rs/app-server-protocol/src/: lib.rs  v2.rs
cokra-rs/app-server/src/: lib.rs
cokra-rs/apply-patch/: Cargo.toml
cokra-rs/apply-patch/src/: lib.rs  parser.rs  seek_sequence.rs
cokra-rs/cli/: Cargo.toml
cokra-rs/cli/src/: main.rs
cokra-rs/cloud-requirements/: Cargo.toml
cokra-rs/cloud-requirements/src/: lib.rs
cokra-rs/cloud-tasks/: Cargo.toml
cokra-rs/cloud-tasks-client/: Cargo.toml
cokra-rs/cloud-tasks-client/src/: lib.rs
cokra-rs/cloud-tasks/src/: lib.rs
cokra-rs/codex-api/: Cargo.toml
cokra-rs/codex-api/src/: lib.rs
cokra-rs/codex-client/: Cargo.toml
cokra-rs/codex-client/src/: lib.rs
cokra-rs/config/: Cargo.toml
cokra-rs/config/src/: layer_stack.rs  layered.rs  lib.rs  loader.rs  profile.rs  types.rs
cokra-rs/core/: Cargo.toml  config.schema.json
cokra-rs/core/src/: agent.rs  cokra.rs  config.rs  exec.rs  exec_policy.rs  lib.rs  mcp.rs  prompts.rs  sandbox_manager.rs  session.rs  shell.rs  thread_manager.rs  tools.rs  truncate.rs
cokra-rs/core/src/agent/: control.rs  guards.rs  mod.rs  role.rs  status.rs  team_runtime.rs  team_state.rs
cokra-rs/core/src/compaction/: mod.rs
cokra-rs/core/src/event/: broadcaster.rs  mod.rs
cokra-rs/core/src/integrations/: bootstrap.rs  loader.rs  manifest.rs  mod.rs  projector.rs
cokra-rs/core/src/lsp/: client.rs  mod.rs  server.rs
cokra-rs/core/src/model/: auth_orchestrator.rs  auth_store.rs  client.rs  connect_catalog.rs  error.rs  metadata.rs  mod.rs  model_catalog.rs  models_dev.rs  oauth_connect.rs  plugin_registry.rs  provider.rs  provider_auth.rs  provider_catalog.rs  registry.rs  streaming.rs  transform.rs  types.rs
cokra-rs/core/src/prompts/: agent_leader.md  agent_spawned.md  base.md
cokra-rs/core/src/session/: approvals.rs  manager.rs  mod.rs  state.rs  task.rs  user_input.rs
cokra-rs/core/src/skills/: injection.rs  loader.rs  mod.rs
cokra-rs/core/src/tool_runtime/: approval.rs  events.rs  executor.rs  mod.rs  provider.rs  types.rs
cokra-rs/core/src/tools/: catalog.rs  command_intent.rs  context.rs  diff_tracker.rs  events.rs  mod.rs  network_approval.rs  orchestrator.rs  parallel.rs  registry.rs  router.rs  sandboxing.rs  spec.rs  validation.rs
cokra-rs/core/src/turn/: context.rs  executor.rs  mod.rs  regular_task.rs  response_items.rs  sse_executor.rs  task.rs  text_function_calls.rs
cokra-rs/core/tests/: sse_integration_test.rs  tool_kernel_baseline_snapshot.rs
cokra-rs/exec/: Cargo.toml
cokra-rs/exec-server/: Cargo.toml
cokra-rs/exec-server/src/: lib.rs
cokra-rs/exec/src/: lib.rs
cokra-rs/file-search/: Cargo.toml
cokra-rs/file-search/src/: lib.rs
cokra-rs/keyring-store/: Cargo.toml
cokra-rs/keyring-store/src/: lib.rs
cokra-rs/linux-sandbox/: Cargo.toml
cokra-rs/linux-sandbox/src/: lib.rs
cokra-rs/mcp-server/: Cargo.toml
cokra-rs/mcp-server/src/: lib.rs
cokra-rs/model-provider/: Cargo.toml
cokra-rs/model-provider/src/: lib.rs  provider.rs  registry.rs  router.rs  types.rs
cokra-rs/model-provider/src/auth/: api_key.rs  mod.rs  oauth.rs  storage.rs
cokra-rs/model-provider/src/providers/: anthropic.rs  azure.rs  custom.rs  google.rs  groq.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
cokra-rs/model-provider/src/streaming/: mod.rs  types.rs
cokra-rs/network-proxy/: Cargo.toml
cokra-rs/network-proxy/src/: lib.rs
cokra-rs/protocol/: Cargo.toml
cokra-rs/protocol/src/: lib.rs
cokra-rs/protocol/src/prompts/: agent.rs  mod.rs  system.rs
cokra-rs/protocol/src/protocol/: config_types.rs  items.rs  mod.rs  models.rs  user_input.rs
cokra-rs/rmcp-client/: Cargo.toml
cokra-rs/rmcp-client/src/: lib.rs
cokra-rs/secrets/: Cargo.toml
cokra-rs/secrets/src/: lib.rs
cokra-rs/shell-command/: Cargo.toml
cokra-rs/shell-command/src/: lib.rs
cokra-rs/state/: Cargo.toml  schema.sql
cokra-rs/state/src/: database.rs  lib.rs
cokra-rs/stdio-to-uds/: Cargo.toml
cokra-rs/stdio-to-uds/src/: lib.rs
cokra-rs/tui/: Cargo.toml  styles.md
cokra-rs/tui/src/: app.rs  app_event.rs  app_event_sender.rs  chatwidget.rs  color.rs  custom_terminal.rs  exec_command.rs  history_cell.rs  insert_history.rs  key_hint.rs  lib.rs  markdown.rs  markdown_render.rs  markdown_render_tests.rs  markdown_stream.rs  multi_agents.rs  path_utils.rs  shimmer.rs  slash_command.rs  status_indicator_widget.rs  style.rs  team_panel.rs  terminal_palette.rs  text_formatting.rs  welcome.rs  widgets.rs  wrapping.rs  xml_filter.rs
cokra-rs/tui/src/bottom_pane/: api_key_entry_view.rs  approval_overlay.rs  bottom_pane_view.rs  chat_composer.rs  chat_composer_history.rs  command_popup.rs  footer.rs  list_selection_view.rs  mod.rs  oauth_connect_view.rs  (+9 more)
cokra-rs/unified-exec/: Cargo.toml
cokra-rs/unified-exec/src/: lib.rs
cokra-rs/utils/absolute-path/: Cargo.toml
cokra-rs/utils/async-priority/: Cargo.toml
cokra-rs/utils/cancel/: Cargo.toml
cokra-rs/utils/cargo-bin/: Cargo.toml
cokra-rs/utils/cli/: Cargo.toml
cokra-rs/utils/env/: Cargo.toml
cokra-rs/utils/file-search/: Cargo.toml
cokra-rs/utils/fs-err/: Cargo.toml
cokra-rs/utils/git/: Cargo.toml
cokra-rs/utils/network-proxy/: Cargo.toml
cokra-rs/utils/path/: Cargo.toml
cokra-rs/utils/proj-list/: Cargo.toml
cokra-rs/utils/runfiles/: Cargo.toml
cokra-rs/utils/temp-dir/: Cargo.toml
cokra-rs/utils/testing/: Cargo.toml
cokra-rs/windows-sandbox-rs/: Cargo.toml
cokra-rs/windows-sandbox-rs/src/: lib.rs
(+160 files in other folders)
