# Cokra Rust Workspace
# AI Agent Team CLI Environment

[workspace]
resolver = "3"
members = [
    "cli",
    "core",
    "protocol",
    "tui",
    "app-server",
    "app-server-protocol",
    "state",
    "exec",
    "exec-server",
    "unified-exec",
    "linux-sandbox",
    "windows-sandbox-rs",
    "mcp-server",
    "rmcp-client",
    "stdio-to-uds",
    "shell-command",
    "apply-patch",
    "file-search",
    "network-proxy",
    "keyring-store",
    "config",
    "secrets",
    "cloud-tasks",
    "cloud-tasks-client",
    "cloud-requirements",
    "codex-client",
    "codex-api",
    # Utils
    "utils/absolute-path",
    "utils/async-priority",
    "utils/cancel",
    "utils/cargo-bin",
    "utils/cli",
    "utils/env",
    "utils/fs-err",
    "utils/git",
    "utils/path",
    "utils/proj-list",
    "utils/runfiles",
    "utils/temp-dir",
    "utils/testing",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["Cokra Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cokra/cokra"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
toml_edit = "0.24.0"

# Networking
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.28"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# MCP
rmcp = { version = "0.15", features = ["client"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3"

# UI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
ignore = "0.4"

# Testing
insta = "1.46"
wiremock = "0.6"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
redundant_clone = "deny"
needless_collect = "deny"
