# Cokra App Server Protocol
# JSON-RPC protocol definitions for IDE/desktop integrations

[package]
name = "cokra-app-server-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Runtime
tokio = { version = "1.49", features = ["sync"] }
