# Cokra Apply Patch
# Patch application utility — 1:1 codex apply-patch

[package]
name = "cokra-apply-patch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.26.0"
