# Cokra Codex Client
# HTTP client for API communication

[package]
name = "codex-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Networking
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }

# Runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
