# Cokra Core
# Main orchestrator for the AI agent team system

[package]
name = "cokra-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Internal dependencies
cokra-protocol = { path = "../protocol" }
cokra-config = { path = "../config" }
cokra-state = { path = "../state" }

# External dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
rmcp = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde"] }
dirs = "5.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
pin-project = "1.0"
async-stream = "0.3"

[features]
default = []
tui = ["ratatui"]
mcp = ["rmcp"]
