# Cokra Core
# Main orchestrator for the AI agent team system

[package]
name = "cokra-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Internal dependencies
cokra-protocol = { path = "../protocol" }
cokra-config = { path = "../config" }
cokra-state = { path = "../state" }
cokra-rmcp-client = { path = "../rmcp-client" }
cokra-file-search = { path = "../file-search" }
cokra-apply-patch = { path = "../apply-patch" }

# External dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
rmcp = { workspace = true }
ratatui = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde"] }
dirs = "6"
which = "6"
libc = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
pin-project = "1.0"
async-stream = "0.3"
tokio-util = { workspace = true }
base64 = "0.22"
glob = "0.3"
sha2 = "0.10"

[features]
default = []
tui = ["ratatui"]
mcp = []

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3.26.0"
