# Cokra Execution
# Command execution module

[package]
name = "cokra-exec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
