# Cokra Network Proxy
# Network proxy support for Cokra

[package]
name = "cokra-network-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
