# Cokra Protocol
# Protocol definitions and types for Cokra

[package]
name = "cokra-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Runtime
tokio = { workspace = true }

# Utilities
uuid = { workspace = true }
anyhow = { workspace = true }
