# Cokra RMCP Client
# Rust MCP client implementation

[package]
name = "cokra-rmcp-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# MCP
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# Runtime
tokio = { workspace = true, features = ["process", "io-util", "time", "sync"] }
reqwest = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
