# Cokra Secrets
# Secret management and encryption

[package]
name = "cokra-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Encryption
age = "0.11"

# Runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
