# Cokra Terminal UI
# Interactive terminal-based interface

[package]
name = "cokra-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Core
cokra-core = { path = "../core" }
cokra-config = { path = "../config" }
cokra-protocol = { path = "../protocol" }

# UI framework
ratatui = { workspace = true, features = [
  "scrolling-regions",
  "unstable-backend-writer",
  "unstable-rendered-line-info",
  "unstable-widget-ref",
] }
crossterm = { workspace = true, features = ["bracketed-paste", "event-stream"] }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = "1.12"
textwrap = { workspace = true }
supports-color = { workspace = true }
unicode-width = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = "0.13"
derive_more = { workspace = true, features = ["is_variant"] }
dirs = { workspace = true }
pathdiff = { workspace = true }
shlex = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
# Gate verbose debug logging inside the TUI implementation.
debug-logs = []

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-util = { version = "0.7", features = ["time"] }
