# Cokra Windows Sandbox
# Job object-based sandboxing for Windows

[package]
name = "cokra-windows-sandbox-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[target.'cfg(windows)'.dependencies]
# Windows API
windows = { version = "0.58", features = ["Win32_System_JobObjects"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
